--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
-    "app": "node index.js",
+    "start": "node index.js",
     "vercel-build" : "echo hello",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
