--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "https": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
