--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "https": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sweetalert2": "^11.7.10"
   },
   "devDependencies": {
     "k6": "^0.0.0",
